Kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend
  namespace: travel-app

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: travel-backend

          imagePullPolicy: Never

          ports:
            - containerPort: 5001

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"

            limits:
              memory: "256Mi"
              cpu: "500m"
