Kubernetes/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongodb
  namespace: travel-app

spec:
  serviceName: mongodb-service
  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
        - name: mongodb
          image: mongo

          ports:
            - containerPort: 27017

          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db

  volumeClaimTemplates:
    - metadata:
        name: mongodb-storage

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 1Gi
